# tulip

./: .gitignore  README.md  justfile  pyproject.toml
docs/: examples.py
src/tulip/: __init__.py  filesystem.py  objects.py  repository.py
src/tulip/cli/: __init__.py
tests/: conftest.py  test_filehandle.py  test_filesystem.py  test_imports.py  test_objects.py  test_repository.py
tests/fixtures/config/: sample_config.json
