[project]
name = "tulip"
version = "0.1.0"
description = "Tulip - a digital object repository"
readme = "README.md"
authors = [
    { name = "Graham Hukill", email = "ghukill@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fs>=2.4.16",
    "fs-sshfs>=1.0.2",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "ty>=0.0.1a7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
log_level = "INFO"
filterwarnings = []

[tool.ruff]
target-version = "py312"
line-length = 90
show-fixes = true

[tool.ruff.lint]
select = ["ALL", "PT"]
ignore = []
fixable = ["E", "F", "I", "Q"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = []

[tool.ruff.lint.pydocstyle]
convention = "google"


