[project]
name = "tulip"
version = "0.1.0"
description = "Tulip - a digital object repository"
readme = "README.md"
authors = [
    { name = "Graham Hukill", email = "ghukill@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.0",
    "fsspec>=2025.5.1",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "gitingest>=0.1.4",
    "ipython>=9.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.11",
    "ty>=0.0.1a7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
log_level = "INFO"
filterwarnings = [
    "ignore::DeprecationWarning:fs:",
    "ignore::UserWarning:fs:",
    "ignore::DeprecationWarning:pkg_resources:",
]
addopts = "--cov=src/tulip --cov-report=term"

[tool.ruff]
target-version = "py312"
line-length = 90
show-fixes = true

[tool.ruff.lint]
select = ["ALL", "PT"]
ignore = [
    "D100",
    "D107",
    "D415",
    "EM101",
    "TRY003",
]
fixable = ["E", "F", "I", "Q"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = []

[tool.ruff.lint.pydocstyle]
convention = "google"
